MDEV-6833: SIGSEGV on shutdown with non-default wsrep_slave_threads

thd->variables' table_plugin & tmp_table_plugin should be set to
NULL for wsrep system threads.
Also made a minor change to skip checking of wsrep options if
wsrep_on is not set.